--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
        
 </form>
 <button type="submit">Submit</button>
+<footer>
+<p> Made by Geekhaven
+        <i class="fa fa-address-book-o" aria-hidden="true"></i>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+
+   </footer> </p>
 
    
 </body>
