--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
    
-    <a href="Home.html">Home</a>|</a>
-    <a href="Contact.html">Contact</a>|</a>
-    <a href="About.html">About</a>|</a>
-    <a href="Project.html">Project</a>|</a>
+    <a href="Home.html">Home</a>|
+    <a href="Contact.html">Contact</a>|
+    <a href="About.html">About</a>|
+    <a href="Project.html">Project</a>|
     <br><br><br><br>
      <h1>Students Registration form</h1>
-     <form action=""id="form1"autocomplete="on">
-         <label for="First Name">First Nmae</label><br>
-         <input type="text"name="First Name" id ="first Name"><br>
+     <form>
+         <label for="First Name">First Name</label><br>
+         <input type="text"name="First Name" id ="firstName"><br>
          <label for ="Second Name">Second Name</label><br>
-         <input type="text"name="Second Name" id ="second name"><br>
+         <input type="text"name="Second Name" id ="secondname"><br>
          <label for ="DOB">DOB</label><br>
          <input type="date"name="DOB" id ="DOB"><br><br><br>
          <label for ="Father Name">Father Name</label><br>
-         <input type="text"name="Father Name" id ="Father name"><br>
+         <input type="text"name="Father Name" id ="fathername"><br>
          Document:<br>
          <input type="radio"name="Document"id="Aadhar"value="Aadhar">
          <label for="Aadhar">Aadhar</label><br>
-         <input type="radio"name="Document"id="Driving license"value="Driving license">
+         <input type="radio"name="Document"id="Drivinglicense"value="Driving license">
          <label for="Driving license">Driving license</label><br>
          <input type="radio"name="Document"id="other"value="other">
          <label for="other">Other</label><br>
@@ -37,13 +37,13 @@
             <option value="Other">Other</option>
          </select><br><br><br>
          <label for="des">Description:</label><br>
-        <textarea name="textarea" id="des" cols="100" rows="10" placeholder="describe yourself..."></textarea><br>
+        <textarea name="textarea"id="des"cols="100"rows="10"placeholder="describe yourself..."></textarea><br>
         <input type="checkbox" name="confirm" id="confirm" required>
         <label for="confirm">Confirm</label><br><br>
 
 
        
-</form>
+
 <button type="submit">Submit</button>
 <footer>
 <p> Made by Geekhaven
@@ -53,7 +53,7 @@
         <i class="fa fa-instagram" aria-hidden="true"></i>
 
    </footer> </p>
-
+</form>
    
 </body>
 </html>
